2005-07-06  Lillian Angel  <langel@redhat.com>

	* javax/swing/JTree.java
	Initialized the Hashtable.
	(addSelectionPath): removed redundant code.
	(doExpandParents): added in line so that state is 
	changed for current path. Changed while loop to if 
	statement, an infinite loop was occurring.
	* javax/swing/plaf/basic/BasicTreeUI.java
	(getPathForRow): Implemented to work with visibility.
	(isLeaf): Implemented
	(mouseClicked): add in check for expand/collapse. 
	Selection for DISCONTIGUOUS tree selection is 
	implemented.
	(treeExpanded): called repaint, so the tree updates 
	visually when something is expanded.
	(treeCollapse): Similar to treeExpanded.
	(paintLeaf): changed to paint leaf only when visible.
	(paintNonLeaf): paints only when visible.
	(paintRecursive): lines for tree are only painted when 
	needed. checked for visibility of current object and 
	parent.
	* javax/swing/tree/DefaultTreeCellRenderer.java
	(getTreeCellRendererComponent): setting icons when 
	expanded.
	* javax/swing/tree/DefaultTreeSelectionModel.java
	(clearSelection): set leadPath to null because selection
	should be completely reset.

2005-07-06  Roman Kennke  <roman@kennke.org>

	* javax/swing/AbstractButton.java
	(setContentAreaFilled): Set the opaque property here.

2005-07-06  David Gilbert  <david.gilbert@object-refinery.com>

	* java/awt/AWTKeyStroke.java: fixed API doc links,
	* java/awt/BufferCapabilities.java: likewise,
	* java/awt/ColorPaintContext.java: likewise,
	* java/awt/Component.java: likewise,
	* java/awt/Container.java: likewise,
	* java/awt/EventQueue.java: likewise,
	* java/awt/GraphicsDevice.java: likewise,
	* java/awt/Image.java: likewise,
	* java/awt/KeyboardFocusManager.java: likewise,
	* java/awt/MediaTracker.java: likewise,
	* java/awt/PrintJob.java: likewise,
	* java/awt/Robot.java: likewise.
	
2005-07-06  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JTable.java
	(setAutoCreateColumnsFromModel): when the flag changes from false to